# web_crawling

./: .gitignore  BeautifulSoup.py  BeautifulSoup2.py  README.md  bs.py  bs1.py  bs2.py  hello.py  responces.py  stream.py  stream1.py  test.py  test1.py  test2.py
01_python_basic/functions/: file.py  function.py  lambda.py  quiz.py  sys_viewer.py
01_python_basic/matplotlib_practice/: 0417_quiz.py  0420_quiz.py  pyplot_st.py
02_web/web_browser/: CSS1.html  CSS3.html  CSS4.html  form1.html  quiz.html  table1.html
02_web/web_crawling/: BeautifulSoup3.py  app.py  book_info.py  requests.py  requests2.py  streamlit.py  streamlit2.py
03_flask/: app.py
04_openCV/: camera.py  hellocv.py  img_ops.py  mask_op.py  matplot.py  slideshow.py  video.py
04_openCV/practice_template_matching/: .gitignore  assignment.py
05_pandas_basic/: .gitignore  01.ipynb  02.ipynb  03.ipynb  main.py  pyproject.toml  고객정보분석03.ipynb
06_pytorch_basic/: 01.ipynb  03.ipynb  04.ipynb  pyproject.toml  의류직물이미지분석.ipynb
pandas_0421/: quiz_0421.py
todo_api/: database.py  main.py  models.py  requirements.txt  schemas.py
todo_api/routers/: categories.py  todos.py
web_browser/: CSS2.html  CSS실습.html  style.css  weather.html
