[project]
name = "06-pytorch-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "py7zr>=1.1.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.0",
]
